Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-14748

QtCreator crash on switching between files

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • Qt Creator 3.5.0-rc1
    • Qt Creator 3.5.0-beta1
    • C/C++/Obj-C++ Support
    • None
    • Kubuntu 15.04, x86_64.
    • 99dea548e034524d49820a2c10b3b03adddc9ec3

      I opened my CMake C++ project. From the previous session it had several files opened. I switched to another open C++ file and QtCreator crashed. See the backtrace attached.

      The crash happens only when I switch to a particular file. I'm able to switch to other files without a problem. What's interesting, yesterday I was editing this very file in QtCreator and it didn't crash. Apparently, the problem appeared after I restarted QtCreator and it reparsed the project.

      I wasn't able to identify the particular piece of code that caused the crash. The code includes quite a few headers, some of them are from Boost and ffmpeg. It kept crashing until I commented this line:

      std::unique_ptr< AVFormatContext, xcoder::av_format_context_deleter > m_avf_ctx;
      

      as well as ffmpeg headers. But after it stopped crashing I uncommented all code back and it didn't crash again after restart.

        1. valgrind.txt
          78 kB
        2. qtcreator-test.tar.xz
          1 kB
        3. qtcreator_crash.txt
          17 kB
        4. phoenix.png
          phoenix.png
          14 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            orgads Orgad Shaneh
            lastique Andrey Semashev
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes